<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hermes.mju.captdesign.hermesar.HermesActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/compass"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="52dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:button="@drawable/btn_change"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintTop_toBottomOf="@+id/zoomout" />


    <ImageButton
        android:id="@+id/zoomin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/zoomin"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <ImageButton
        android:id="@+id/zoomout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/zoomout"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintTop_toBottomOf="@+id/zoomin" />

    <Button
        android:id="@+id/ARbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/button_AR"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView" />

    <Button
        android:id="@+id/DestiButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/button_Desti"
        app:layout_constraintEnd_toStartOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="@+id/mainView" />

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainView" />

    <ImageButton
        android:id="@+id/CurrentButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/nowlocation"
        android:text="@string/button_current"
        app:layout_constraintBottom_toBottomOf="@+id/mainView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/SearchButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/search"
        android:text="@string/button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>